--- a/Arc_Ai/Arc_Ai/core/static/styles/signup.css
+++ b/Arc_Ai/Arc_Ai/core/static/styles/signup.css
@@ -5,6 +5,13 @@ body {
 }
 
 /*================================================== ID's */
+#social_media {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+}
 
 #login_cntr {
     display: flex;
