--- a/Arc_Ai/Arc_Ai/core/templates/core/profilepage.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/profilepage.html
@@ -47,7 +47,8 @@
             <div id="cont">
                 <div id="MainProfile">
                     {% if signup_details %}
-                    <img src="{% static 'Images/avatar.png' %}" alt="User avatar" class="Avatar"/>
+                    <img src="{% static 'Images/Profile' %}{{ signup_details.profile_avatar_id }}.png" alt="User avatar" class="Avatar"/>
+                    <!-- <img src="{{ signup_details.avatar_url }}" alt="User avatar" class="Avatar"/> -->
                     <div id="userInfo">
                         <h1 class="username">{{ signup_details.first_name }} {{ signup_details.middle_name|slice:"1" }}. {{ signup_details.last_name }}</h1>
                         <h2>{{user.email}}</h2>
