--- a/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/admin_files_page.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;300;400;500;600;700&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/boxicons@2.1.4/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'styles/admin_files_page.css' %}">
-    <link rel="stylesheet" href="{% static 'styles/adminstyles.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
     
 </head>
 <body>
