--- a/Arc_Ai/Arc_Ai/core/templates/core/user_involved_map.html
+++ b/Arc_Ai/Arc_Ai/core/templates/core/user_involved_map.html
@@ -7,6 +7,9 @@
     <title>Organization</title>
     <link rel="stylesheet" href="{% static 'styles/styles.css' %}">
     <link rel="stylesheet" href="{% static 'styles/usermap.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 </head>
 <body>
 <div id="sidebar">
